@@ -1,21 +1,40 @@
 # Datahike SQLite Backend
 
-This library provides a backend for [Datahike][datahike] using [SQLite][sqlite] as the backing store.
+This library provides a backend for [Datahike][datahike] using [SQLite][sqlite] as the backing store, with direct native integration through [sqlite4clj][sqlite4clj].
 
-**Why not [datahike-jdbc]?** SQLite is different than other JDBC supported databases. The biggest difference is that we do not need connection pooling and the complexity that brings.
+> [!WARNING]
+> This project is highly experimental and not production ready.
+
+## Why sqlite4clj?
+
+Unlike the [datahike-jdbc][datahike-jdbc] backend, this implementation uses [sqlite4clj][sqlite4clj] - a minimalist FFI binding to SQLite's C API using Java 22's Foreign Function Interface (Project Panama). This approach offers several advantages:
+
+- Bypasses JDBC overhead by interfacing directly with SQLite's C API through FFI for direct SQLite access.
+- SQLite's embedded nature doesn't require thread-backed connection pools like c3p0/HikariCP, eliminating that complexity.
+- Provides better performance through cached prepared statements per connection and inline caching of column reading functions.
+- Eliminates dependencies on sqlite-jdbc, c3p0, and next.jdbc for a smaller footprint.
+- Easier access to SQLite-specific features and pragmas for targeted optimizations.
+- More suitable architecture for SQLite's single-writer, multiple-reader model.
 
 ## Usage
 
-Include the library in your deps.edn, along with the peer dependencies.
+Include the library in your deps.edn:
 
 ``` clojure
- org.xerial/sqlite-jdbc   {:mvn/version "3.49.1.0"}
- io.replikativ/datahike   {:mvn/version "0.6.1596"}
+ io.replikativ/datahike   {:mvn/version "0.6.1601"}
  ramblurr/datahike-sqlite {:git/url "https://github.com/ramblurr/datahike-sqlite"
-                           :git/sha "0626e8cdab400f895f8c2fba3ada108263107ea8"}
+                           :git/sha "c94e449be351b13c7b279d39ee3266cc22dd8f7d"}
 ```
 
-Then use it like so:
+### Dependencies
+
+- The [io.replikativ/datahike dependency](https://clojars.org/io.replikativ/datahike) must be provided by your project and this backend is designed to work with Datahike 0.6.x versions.
+- [sqlite4clj][sqlite4clj] requires Java 22 or later.
+- If you use this library as a git dependency, you will need to prepare the library with `clj -X:deps prep`.
+- You must include `:jvm-opts ["--enable-native-access=ALL-UNNAMED"]` in your deps.edn alias.
+- When creating an executable jar file, you can avoid the need to pass this argument by adding the manifest attribute `Enable-Native-Access: ALL-UNNAMED` to your jar.
+
+### Example
 
 ``` clojure
 (require
@@ -23,54 +42,65 @@ Then use it like so:
  '[datahike.api :as d])
 
 (def cfg {:store {:backend :sqlite
-                  :journal_mode "WAL"
-                  :synchronous  "NORMAL"
-                  :dbname  "mydb.sqlite"}})
+                  :dbname  "foobar.sqlite"
+                  ;; see sqlite4clj.core/init-db! for the possible options
+                  :sqlite-opts {:pool-size 4}}})
 
 (d/database-exists? cfg)
 ;; => false
 
 (d/create-database cfg)
 
-;; this will delete the table in the sqlite file,
-;; but will not delete the sqlite file itself
-(d/delete-database cfg)
-
 (def conn (d/connect cfg))
 
-(d/transact conn [{:db/ident       :name
+(d/transact conn [{:db/ident       :artifact
                    :db/valueType   :db.type/string
                    :db/cardinality :db.cardinality/one}
-                  {:db/ident       :age
+                  {:db/ident       :level
                    :db/valueType   :db.type/long
                    :db/cardinality :db.cardinality/one}])
 
-(d/transact conn [{:name "Ivan" :age 15}])
+(d/transact conn [{:name "Mighty Teapot" :age 20}])
 
 (d/q '[:find (pull ?e [*])
        :in $ ?name
        :where [?e :name ?name]]
-     @conn "Ivan")
+     @conn "Mighty Teapot")
+
+
+;; this will delete the table in the sqlite file,
+;; but will not delete the sqlite file itself
+(d/delete-database cfg)
 
 (d/release conn)
 ```
 
 ## Configuration
 
-The value for `:store` is a db-spec map. To invoke this library you should
-include `:backend :sqlite` in that map, along with other sqlite/jdbc specific
-options.
+The value for `:store` is a configuration map. To invoke datahike-sqlite (this library) you must include `:backend :sqlite` in that map.
 
-Please read the [Datahike configuration docs][setup-docs] on how to configure your backend. 
+You must also include `:dbname`, a path to the SQLite file.
 
-SQLite specific options can be passed in this map for example `:journal_mode "WAL"`, you can find more examples in the [`org.sqlite.SQLiteConfig`][sqlite-config].
+You can optionally include the key `:sqlite-opts` with an options map which will be passed to [`sqlite4clj.core/init-db!`][sqlite4clj].
 
-               
+## Development
 
-## Run Tests
+### Testing
 
 ```bash
-  bash -x ./bin/run-integration-tests
+bb test
+```
+
+### Formatting
+
+```shell
+bb fmt
+```
+
+### Linting
+
+```shell
+bb lint
 ```
 
 ## License: MIT License
@@ -78,6 +108,7 @@ SQLite specific options can be passed in this map for example `:journal_mode "WA
 Copyright © 2025 Casey Link <casey@outskirtslabs.com> Distributed under the [MIT](https://spdx.org/licenses/MIT.html).
 
 [sqlite]: https://www.sqlite.org
+[sqlite4clj]: https://github.com/andersmurphy/sqlite4clj
 [datahike]: https://github.com/replikativ/datahike
 [datahike-jdbc]: https://github.com/replikativ/datahike-jdbc/
 [setup-docs]: https://github.com/replikativ/datahike/blob/master/doc/config.md
